<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="20dp"
        android:background="@color/gray" >

        <ToggleButton
            android:id="@+id/length"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.3"
            android:text="@string/str_length"
            android:textOn="@string/str_length"
            android:textOff="@string/str_length"
            android:textColor="@color/the_best_blue"
            android:textSize="25sp"
            android:onClick="changeToLength" />

        <Button
            android:id="@+id/temperature"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:textSize="25sp"
            android:textColor="@color/the_best_blue"
            android:text="@string/str_temperature"
            android:onClick="changeToTemperature" />

        <Button
            android:id="@+id/weight"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:textSize="25sp"
            android:textColor="@color/the_best_blue"
            android:text="@string/str_weight"
            android:onClick="changeToWeight" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/contains_controls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_group"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/textInput1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/default_length"
            android:inputType="numberDecimal"
            android:textSize="40sp" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textInput1"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_toRightOf="@+id/textInput1"
            android:text="@string/equals"
            android:textColor="@color/the_best_blue"
            android:textSize="50sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/textInput2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/equals"
            android:layout_alignBottom="@+id/equals"
            android:layout_toRightOf="@+id/equals"
            android:ems="10"
            android:hint="@string/default_length"
            android:inputType="numberDecimal"
            android:textSize="40sp" />

        <Spinner
            android:id="@+id/spinner1"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/textInput2"
            android:layout_below="@+id/textInput2"
            android:entries="@array/lengths_array"
            android:prompt="@id/textInput1"
            android:spinnerStyle="@android:style/Widget.Spinner.DropDown" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="114dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInput2"
            android:layout_toLeftOf="@+id/equals"
            android:entries="@array/lengths_array"
            android:prompt="@id/textInput1"
            android:spinnerStyle="@android:style/Widget.Spinner.DropDown" />
    </RelativeLayout>

</RelativeLayout>